# grompack-firmware

./: .gitignore  CMakeLists.txt  README.md  app.overlay  prj.conf  sample.yaml
app/: CMakeLists.txt  app.overlay  debug.conf  prj.conf
app/src/: ble.c  commands.c  config.c  gppi.c  main.c  peripherals.h  saadc.c  setup.c  stimulation.c  timer.c
boards/Team_Kakkerlak/gromboard-minewsemi/: Kconfig.gromboard-minewsemi  board.cmake  board.yml  gromboard-minewsemi_nrf54l15_cpuapp.dts  gromboard-minewsemi_nrf54l15_cpuapp.yaml  gromboard-minewsemi_nrf54l15_cpuapp_defconfig
src/: ble.c  ble.h  gppi.c  main.c  main_packed_ble.c  peripherals.h  saadc.c  saadc_packed.c
tests/adc_double_test/: adc_tester_animate.py  prj.conf
tests/adc_double_test/src/: peripherals.h  saadc.c
tests/adc_test/: CMakeLists.txt  adc_test.overlay  adc_tester.py  adc_tester_animate.py  adc_tester_log.py  prj.conf
tests/adc_test/src/: gppi.c  main.c  peripherals.h  saadc.c  timer.c
tests/app_test/: adc_perf.py  app_tester.py  app_tester_animate.py  app_tester_cmd.py  ble-perf.py  rec_2.py  rec_3.py  rec_4.py  recorder.py  recorder_2.py  visualiser.py
tests/ble_simple_test/: CMakeLists.txt  ble_simple_tester.py  prj.conf
tests/ble_simple_test/src/: ble.c  main.c  peripherals.h
tests/ble_test/: CMakeLists.txt  ble_tester.py  prj.conf
tests/ble_test/src/: main.c
tests/gpio_test/: CMakeLists.txt  README.md  gpio_test.overlay  prj.conf
tests/gpio_test/src/: main.c
tools/: ble_tester.py
x-boards/: app.overlay
